; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfcopy.c_RemoveLast.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfcopy.c_RemoveLast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CHAR_BACKSLASH = common dso_local global i64 0, align 8
@CHAR_COLON = common dso_local global i64 0, align 8
@CHAR_NULL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @RemoveLast(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  store i64* %0, i64** %2, align 8
  store i64 0, i64* %4, align 8
  %5 = load i64*, i64** %2, align 8
  store i64* %5, i64** %3, align 8
  br label %6

6:                                                ; preds = %38, %1
  %7 = load i64*, i64** %2, align 8
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %41

10:                                               ; preds = %6
  %11 = load i64*, i64** %2, align 8
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @CHAR_BACKSLASH, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = load i64*, i64** %2, align 8
  store i64* %16, i64** %3, align 8
  store i64 0, i64* %4, align 8
  br label %35

17:                                               ; preds = %10
  %18 = load i64*, i64** %2, align 8
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @CHAR_COLON, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %34

22:                                               ; preds = %17
  %23 = load i64*, i64** %2, align 8
  %24 = getelementptr inbounds i64, i64* %23, i64 1
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @CHAR_BACKSLASH, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %22
  %29 = load i64*, i64** %2, align 8
  %30 = getelementptr inbounds i64, i64* %29, i32 1
  store i64* %30, i64** %2, align 8
  br label %31

31:                                               ; preds = %28, %22
  %32 = load i64*, i64** %2, align 8
  %33 = getelementptr inbounds i64, i64* %32, i64 1
  store i64* %33, i64** %3, align 8
  store i64 0, i64* %4, align 8
  br label %38

34:                                               ; preds = %17
  br label %35

35:                                               ; preds = %34, %15
  %36 = load i64, i64* %4, align 8
  %37 = add nsw i64 %36, 1
  store i64 %37, i64* %4, align 8
  br label %38

38:                                               ; preds = %35, %31
  %39 = load i64*, i64** %2, align 8
  %40 = getelementptr inbounds i64, i64* %39, i32 1
  store i64* %40, i64** %2, align 8
  br label %6

41:                                               ; preds = %6
  %42 = load i64, i64* @CHAR_NULL, align 8
  %43 = load i64*, i64** %3, align 8
  store i64 %42, i64* %43, align 8
  %44 = load i64, i64* %4, align 8
  ret i64 %44
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
